# EyePose

./: README.md
ML/: develop.md  inferno.py  utils.py
ML/locator/: augmentor.py  geometry.py  myTest.py
traditional/: bug_log.txt  develop.md  geometry.py  pupil_realsense.py  pupil_track.py  raw_point.txt
xmate_control/: bug_log.txt  cetamadeshi.txt  data.csv  data_error  raw_point.txt  xmate.ini  复制问题_待解决.txt  编译方法py.txt
xmate_control/install/: local_setup.sh  setup.sh
xmate_control/install/pub/lib/pub/: control_pub
xmate_control/install/pub/share/pub/: package.dsv  package.ps1  package.sh
xmate_control/install/sub/share/sub/: local_setup.sh  package.sh  package.xml
xmate_control/log/: latest_build
xmate_control/src/pub/: develop.md  package.xml  setup.cfg  setup.py
xmate_control/src/pub/pub/: control_pub.py
xmate_control/src/sub/: CMakeLists.txt
xmate_control/src/sub/src/: IK_solution.cpp  Interpolator_cubic.cpp  control_sub.cpp
